# word_collector

./: .gitignore  Cargo.toml  rustfmt.toml  words.txt
src/: main.rs  wiktionary.rs
