[package]
name = "word_collector"
version = "0.1.1"
authors = ["Dov Reshef <reshef.dov@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
regex = "1.5"
select = "0.5"
color-eyre = "0.5"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
once_cell = "1.8.0"
futures = "0.3.16"
urlencoding = "2.1.0"

[profile.dev.package.backtrace]
opt-level = 3
